--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ dist/
 dist-newstyle/
 node_modules/
 .vscode/
+
+frontend/elm-stuff/
+frontend/node_modules/
+frontend/dist/
+frontend/.parcel-cache/
