--- a/cdk/package.json
+++ b/cdk/package.json
@@ -15,15 +15,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^2.0.0-rc.1",
-    "@types/node": "22.7.5",
-    "aws-cdk-lib": "^2.80.0",
-    "cdk": "^2.0.0-rc.1",
-    "ts-node": "^10.0.0",
-    "typescript": "^5.0.0"
+    "@aws-cdk/assert": "^2.68.0",
+    "@types/node": "22.12.0",
+    "aws-cdk-lib": "^2.177.0",
+    "cdk": "^2.177.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.20"
+    "constructs": "^10.4.2",
+    "source-map-support": "^0.5.21",
+    "@aws-cdk/aws-s3-deployment": "^2.177.0",
+    "@aws-cdk/aws-cloudfront": "^2.177.0",
+    "@aws-cdk/aws-cloudfront-origins": "^2.177.0"
   }
 }
