--- a/cdk/package.json
+++ b/cdk/package.json
@@ -23,10 +23,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "constructs": "^10.4.2",
-    "source-map-support": "^0.5.21",
-    "@aws-cdk/aws-s3-deployment": "^2.177.0",
-    "@aws-cdk/aws-cloudfront": "^2.177.0",
-    "@aws-cdk/aws-cloudfront-origins": "^2.177.0"
+    "aws-cdk-lib": "2.177.0",
+    "constructs": "^10.0.0",
+    "source-map-support": "^0.5.21"
   }
 }
